--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ html
     head 
         title LoginPage 
     body 
-        form(action="/login", method="POST") 
+        form(action="/frontpage", method="POST") 
             input(type="text", name="username", id="username")
             input(type="password", name="password", id="password")
             button(type="submit") Login
