--- a/views/login.pug
+++ b/views/login.pug
@@ -6,3 +6,5 @@ html
             input(type="text", name="username", id="username")
             input(type="password", name="password", id="password")
             button(type="submit") Login
+        
+        a(href="/register") Register
