--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,5 +1,5 @@
 .menu 
     if knownUser 
-        a(href="/logout") LOGOUT 
+        a.loginButton(href="/logout") Logout
     else 
-        a(href="/login") LOGIN 
+        a.loginButton(href="/login") Login 
