--- a/views/register.pug
+++ b/views/register.pug
@@ -1,22 +1,24 @@
 html 
     head 
-        title Register Page 
-    body 
-        form() 
-            label(for="username") Username: 
-            input(type="text", name="username", id="username", placeholder="Username")
-            br
-            label(for="password") Password: 
-            input(type="password", name="password", id="password", placeholder="Password")
-            br
-            label(for="retypepass") Retype Password: 
-            input(type="password", name="retypepass", id="retypepass", placeholder="Retype password")
-            br
-            label(for="userlevel") Userlevel: 
-            select(name="userlevel" id="userlevel")
-                option(value="1") Niveau 1
-                option(value="2") Niveau 2
-                option(value="3") Niveau 3
-            br
-            button(type="button", id="submitBtn") Register
-script(src="register.js") 
+        title Register Page
+        link(rel="stylesheet", href="/css/styles.css") 
+    body
+        .containter 
+            form() 
+                label(for="username") Username: 
+                input(type="text", name="username", id="username", placeholder="Username")
+                br
+                label(for="password") Password: 
+                input(type="password", name="password", id="password", placeholder="Password")
+                br
+                label(for="retypepass") Retype Password: 
+                input(type="password", name="retypepass", id="retypepass", placeholder="Retype password")
+                br
+                label(for="userlevel") Userlevel: 
+                select(name="userlevel" id="userlevel")
+                    option(value="1") Niveau 1
+                    option(value="2") Niveau 2
+                    option(value="3") Niveau 3
+                br
+                button(type="button", id="submitBtn") Register
+    script(src="register.js") 
