--- a/views/frontpage.pug
+++ b/views/frontpage.pug
@@ -17,6 +17,7 @@ html
             .post-header 
               - const owner = users.find(user => user.username === chat.owner)
               if owner
+                img(src="user-icon.webp")
                 a.owner(href="/user/" + owner.username) #{owner.username}
               else
                 span Ukendt bruger
