--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,6 +26,7 @@ header {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+
 h1 {
     color: white;
 }
@@ -166,10 +167,9 @@ a.chatLink {
 }
 
 .post-header img {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: auto;
     border-radius: 50%;
-    margin-right: 1rem;
 }
 
 .post-header .username {
@@ -222,4 +222,8 @@ a.subject{
 
 a.subject:hover{
     color: darkblue;
+}
+
+.message {
+    display: inline;
 }
