messages og userinfo changes

--- a/views/messages.pug
+++ b/views/messages.pug
@@ -6,7 +6,9 @@ html
         header 
             include includes/header
         .container
+            h2= "Emner"
             each c in chat 
                 li= c.subject
+            h2= "Beskeder"
             each t in userchats
                 li= t.text 
