--- a/views/messages.pug
+++ b/views/messages.pug
@@ -6,9 +6,16 @@ html
         header 
             include includes/header
         .container
-            h2= "Emner"
-            each c in chat 
-                li= c.subject
-            h2= "Beskeder"
-            each t in userchats
-                li= t.text 
+            .post-header
+                h2= "Beskeder sendt af " + userInfo.username 
+            .post-content
+                - let lastSubject = null
+                each t in userchats
+                    - const subject = chat.find(sub => sub.id == t.chatId)
+                    if subject.subject !== lastSubject
+                        p="Emne: " + subject.subject
+                        - lastSubject = subject.subject
+                    p="Besked: " + t.text
+            button(type="button" onclick="history.back()") Tilbage
+        footer
+            p &copy; 2025 ChatForum
