--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,7 +1,6 @@
-.menu 
+.menu
+    h1 ChatForum
     if knownUser 
         a.loginButton(href="/logout") Logout
         if user && user.userlevel == 3
             a.usersButton(href="/users") Brugere
-    else 
-        a.loginButton(href="/login") Login 
