--- a/views/frontpage.pug
+++ b/views/frontpage.pug
@@ -17,10 +17,9 @@ html
               if owner
                 img(src="user-icon.webp")
                 a.owner(href="/users/" + owner.username) #{owner.username}
-              else
-                span Ukendt bruger
             .post-content
               a.subject(href="/chats/" + chat.id) #{chat.subject}
+              p= chat.initialMessage
             .post-footer
               -const subjectCreateDato = new Intl.DateTimeFormat('da-DK').format(new Date(chat.createDate))
               span #{subjectCreateDato}
