--- a/assets/css/chats.css
+++ b/assets/css/chats.css
@@ -27,6 +27,17 @@
     padding-left: 15px;
 }
 
+.inputContainer {
+    border: 1px solid black;
+    border-radius: 8px;
+    padding: 10px;
+    max-width: 50%;
+}
+
+.inputContainer textarea {
+    width: 90%;
+    max-width: 90%;
+}
 
 header {
     position: relative;
@@ -37,7 +48,7 @@ header {
 }
 
 .container {
-    text-align: center;
+    /*text-align: center;*/
     position: relative;
     max-width: 800px;
     margin: 2rem auto;
