Virkende removeknap og uvirkende rediger knap

--- a/views/chats.pug
+++ b/views/chats.pug
@@ -33,6 +33,9 @@ html
                         h5= `${message.sender} - ${sendtDato}`
                     .message
                         p= message.text
+                    if user.username == message.sender && user.userlevel > 1      
+                        button(type="button", id="editBtn") Rediger
+                        button(type="button", class="removeBtns", data-id=message.id) Slet
 
     script(src="/chats.js") 
     
