--- a/views/userinfo.pug
+++ b/views/userinfo.pug
@@ -1,6 +1,9 @@
 html 
     head 
-        link(rel="stylesheet", href="/css/styles.css") 
+        link(rel="stylesheet", href="/css/styles.css")
+        script.
+            const userLevel = "#{userInfo.userlevel}" 
+            const userId = "#{userInfo.userlevel}"
     body
         header
             include includes/header
@@ -13,3 +16,6 @@ html
                 p= "User Level: " + userInfo.userlevel
                 a.button(href="/users/" + userInfo.username + "/messages") Messages
                 button(type="button" onclick="history.back()") Tilbage
+                if user.userlevel == 3
+                    button(type="button", class="editULevelBtn") Edit userlevel
+    script(src="/js/userLogic.js") 
