--- a/assets/css/chats.css
+++ b/assets/css/chats.css
@@ -73,11 +73,11 @@ a.button {
     transition: background-color 0.3s ease;
 }
 
-a.button:hover, a.loginButton:hover {
+a.button:hover, a.loginButton:hover, a.usersButton:hover {
     background-color: #45a049;
 }
 
-a.button:active, a.loginButton:active {
+a.button:active, a.loginButton:active, a.usersButton:active {
     background-color: #3e8e41;
 }
 
@@ -99,6 +99,20 @@ a.loginButton{
     
 }
 
+a.usersButton{
+    background-color: #4CAF50;
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    font-size: 1rem;
+    text-align: center;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    transition: background-color 0.3s ease;
+}
 
 
 .owner {
