--- a/assets/css/chats.css
+++ b/assets/css/chats.css
@@ -22,10 +22,11 @@
 .message p {
     padding-left: 30px;
 }
-
+/*
 .messages {
     padding-left: 15px;
 }
+    */
 
 .inputContainer {
     border: 1px solid black;
@@ -127,6 +128,14 @@ a.usersButton{
     padding-left: 10px;
 }
 
+.messagecontainer {
+    cursor: pointer;
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 10px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
 
 
 /*modal til edit*/
