--- a/views/messages.pug
+++ b/views/messages.pug
@@ -17,7 +17,6 @@ html
                 h3="Beskeder sendt:"
                 each t in userchats
                     - const subject = chat.find(sub => sub.id == t.chatId)
-
                     if subject
                         if subject.subject !== lastSubject
                             p 
@@ -25,7 +24,7 @@ html
                             - lastSubject = subject.subject
                         div.flex-container
                             p Besked: #{t.text}
-                            button.delete(type="button", class="deleteBtns", data-id=subject.id)
+                            button.delete(type="button", class="deleteBtns", data-id=t.id)
                                 img.delete(src="/delete.svg")
                     else
                         p.error Beskedens emne kunne ikke findes
